@@ -2,6 +2,16 @@
 
 	Patch from Tambet Ingo <tambet@gmail.com>
 
+	* src/connection-editor/ce-page.c
+	  src/connection-editor/ce-page.h
+	  src/connection-editor/page-wired.c
+	  src/utils/utils.c
+		- Use wired setting accessors
+
+2008-10-26  Dan Williams  <dcbw@redhat.com>
+
+	Patch from Tambet Ingo <tambet@gmail.com>
+
 	* src/applet-device-cdma.c
 	  src/applet-device-gsm.c
 	  src/connection-editor/nm-connection-list.c
